<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_phone_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edtcall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:contentDescription="TODO"
            android:hint="Enter phone number"
            android:importantForAccessibility="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:textSize="18sp"
            tools:ignore="ContentDescription,HardcodedText" />

        <ImageButton
            android:id="@+id/btncall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_call"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnback1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"/>

</LinearLayout>